# BMS

./: .gitignore  CMakeLists.txt  Makefile  README.md  file_utils.cpp  font_utils.cpp  main.cpp  main.t  parser.cpp  parser.h  parser.t  skin.t  string_utils.cpp  string_utils.h  string_utils.t  texture_utils.cpp  texture_utils.t  vec2.h  vec2.t
skin/: skin.txt
src/: file_utils.h  file_utils.t  font_utils.h  font_utils.t  main.cpp  main.t  parser.cpp  parser.h  parser.t  skin.cpp  skin.h  skin.t  texture_utils.cpp  texture_utils.h  texture_utils.t
